framework/config/logging/debug.log
Not Found: /wp-includes/wlwmanifest.xml
Not Found: /xmlrpc.php
Not Found: /blog/wp-includes/wlwmanifest.xml
Not Found: /web/wp-includes/wlwmanifest.xml
Not Found: /wordpress/wp-includes/wlwmanifest.xml
Not Found: /website/wp-includes/wlwmanifest.xml
Not Found: /wp/wp-includes/wlwmanifest.xml
Not Found: /news/wp-includes/wlwmanifest.xml
Not Found: /2020/wp-includes/wlwmanifest.xml
Not Found: /2019/wp-includes/wlwmanifest.xml
Not Found: /shop/wp-includes/wlwmanifest.xml
Not Found: /wp1/wp-includes/wlwmanifest.xml
Not Found: /test/wp-includes/wlwmanifest.xml
Not Found: /wp2/wp-includes/wlwmanifest.xml
Not Found: /site/wp-includes/wlwmanifest.xml
Not Found: /cms/wp-includes/wlwmanifest.xml
Not Found: /sito/wp-includes/wlwmanifest.xml
Not Found: /owa/auth/x.js
Not Found: /apple-touch-icon-precomposed.png
Not Found: /apple-touch-icon.png
Not Found: /.env
Forbidden (CSRF cookie not set.): /
Invalid HTTP_HOST header: 'ec2-3-101-44-136.us-west-1.compute.amazonaws.com'. You may need to add 'ec2-3-101-44-136.us-west-1.compute.amazonaws.com' to ALLOWED_HOSTS.
Traceback (most recent call last):
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/utils/deprecation.py", line 128, in __call__
    response = self.process_request(request)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/middleware/common.py", line 48, in process_request
    host = request.get_host()
           ^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/http/request.py", line 151, in get_host
    raise DisallowedHost(msg)
django.core.exceptions.DisallowedHost: Invalid HTTP_HOST header: 'ec2-3-101-44-136.us-west-1.compute.amazonaws.com'. You may need to add 'ec2-3-101-44-136.us-west-1.compute.amazonaws.com' to ALLOWED_HOSTS.
Bad Request: /
Not Found: /wp-includes/ID3/license.txt
Not Found: /feed/
Not Found: /wp-includes/ID3/license.txt
Not Found: /xmlrpc.php
Not Found: /feed/
Not Found: /blog/wp-includes/wlwmanifest.xml
Not Found: /xmlrpc.php
Not Found: /web/wp-includes/wlwmanifest.xml
Not Found: /blog/wp-includes/wlwmanifest.xml
Not Found: /wordpress/wp-includes/wlwmanifest.xml
Not Found: /web/wp-includes/wlwmanifest.xml
Not Found: /wp/wp-includes/wlwmanifest.xml
Not Found: /wordpress/wp-includes/wlwmanifest.xml
Not Found: /2020/wp-includes/wlwmanifest.xml
Not Found: /wp/wp-includes/wlwmanifest.xml
Not Found: /2019/wp-includes/wlwmanifest.xml
Not Found: /2020/wp-includes/wlwmanifest.xml
Not Found: /2021/wp-includes/wlwmanifest.xml
Not Found: /2019/wp-includes/wlwmanifest.xml
Not Found: /shop/wp-includes/wlwmanifest.xml
Not Found: /wp1/wp-includes/wlwmanifest.xml
Not Found: /2021/wp-includes/wlwmanifest.xml
Not Found: /test/wp-includes/wlwmanifest.xml
Not Found: /shop/wp-includes/wlwmanifest.xml
Not Found: /site/wp-includes/wlwmanifest.xml
Not Found: /wp1/wp-includes/wlwmanifest.xml
Not Found: /cms/wp-includes/wlwmanifest.xml
Not Found: /test/wp-includes/wlwmanifest.xml
Not Found: /site/wp-includes/wlwmanifest.xml
Not Found: /cms/wp-includes/wlwmanifest.xml
Internal Server Error: /
Traceback (most recent call last):
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/template/base.py", line 510, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'static'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/core/handlers/base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/django/framework/whatsapp/views.py", line 847, in index
    return render(request, "whatsapp/home.html")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/template/loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/template/loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/template/backends/django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/template/engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/template/engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/template/loaders/cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/template/loaders/base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/template/base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/template/base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/template/base.py", line 512, in parse
    self.invalid_block_tag(token, command, parse_until)
  File "/home/ubuntu/.local/share/virtualenvs/django-QPJBAfdX/lib/python3.12/site-packages/django/template/base.py", line 573, in invalid_block_tag
    raise self.error(
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 4: 'static'. Did you forget to register or load this tag?
Not Found: /robots.txt
Index page loaded.
Index page loaded.
Index page loaded.
Not Found: /.env
Index page loaded.
Index page loaded.
Django root path: /home/ubuntu/django/framework
